feat: add docker compose and edit swag and readme
