# docs/swagger.json
@@ -126,9 +126,19 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
-                        "in": "header"
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Create Article Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/params.CreateArticleRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -220,9 +230,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "MUST HAVE PERMISSION DeleteArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
-                        "in": "header"
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -317,9 +328,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
-                        "in": "header"
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "description": "Create Article Version Request",
@@ -427,9 +439,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
-                        "in": "header"
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "type": "integer",
@@ -491,9 +504,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "MUST HAVE PERMISSION UpdateStatusArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
-                        "in": "header"
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "type": "integer",
@@ -647,7 +661,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "fill with Bearer token for accessing draft, published, and archived articles. If authorization is not provided default is showing published articles",
                         "name": "Authorization",
                         "in": "header"
                     }
@@ -689,7 +703,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
                     },
@@ -744,9 +758,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
-                        "in": "header"
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "description": "Create Tag Request",
@@ -801,7 +816,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
                     },
@@ -886,6 +901,23 @@
                 },
                 "version": {
                     "type": "integer"
+                }
+            }
+        },
+        "params.CreateArticleRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
